--- a/six-shop/package.json
+++ b/six-shop/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
+    "vant": "^2.10.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-import": "^1.13.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
